syntax = "proto3";

package auth.v1alpha;
import "google/protobuf/timestamp.proto";

option go_package = "stubs";

enum UserRoleAuth {
  USER_ROLE_BASIC = 0;
  USER_ROLE_ADMIN = 1;
}

message UserAuth {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;

  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;

  UserRoleAuth role = 7;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  string ip = 3;
}

message LoginResponse {
  string refresh_token = 1;
  string jwt = 2;
  enum STATUS {
    OK = 0;
    WRONG_PASSWORD = 1;
    NOT_FOUND = 2;
    INTERNAL = 3;
  }
  STATUS status = 3;
  UserAuth user = 4;
}

message RefreshTokenRequest {
  string refresh_token = 1;
  string ip = 2;
}

message RefreshTokenResponse {
  string refresh_token = 1;
  string jwt = 2;
  string user_id = 3;
}

message ValidateRequest {
  string jwt = 1;
  // Add role here
}

message ValidateResponse {
  bool ok = 1;
  string userId = 2;
  string userEmail = 3;
  UserRoleAuth userRole = 4;
  bool internal = 5;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}
